--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "@popperjs/core": "^2.10.2",
         "axios": "^0.25",
         "bootstrap": "^5.1.3",
+        "laravel-mix-purgecss": "^6.0.0",
         "laravel-vite-plugin": "^0.2.1",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
